Added functioning Login capabilities
