# pkg/api/v1/auth-service.pb.go
@@ -67,9 +67,10 @@ const (
 	CreateUserResponse_INTERNAL_ERROR   CreateUserResponse_ErrorCode = 1
 	CreateUserResponse_INVALID_EMAIL    CreateUserResponse_ErrorCode = 2
 	CreateUserResponse_INVALID_USERNAME CreateUserResponse_ErrorCode = 3
-	CreateUserResponse_INVALID_PASSWORD CreateUserResponse_ErrorCode = 4
-	CreateUserResponse_BLANK_USERNAME   CreateUserResponse_ErrorCode = 5
-	CreateUserResponse_BLANK_PASSWORD   CreateUserResponse_ErrorCode = 6
+	CreateUserResponse_USERNAME_TAKEN   CreateUserResponse_ErrorCode = 4
+	CreateUserResponse_EMAIL_TAKEN      CreateUserResponse_ErrorCode = 5
+	CreateUserResponse_BLANK_USERNAME   CreateUserResponse_ErrorCode = 6
+	CreateUserResponse_BLANK_PASSWORD   CreateUserResponse_ErrorCode = 7
 )
 
 var CreateUserResponse_ErrorCode_name = map[int32]string{
@@ -77,9 +78,10 @@ var CreateUserResponse_ErrorCode_name = map[int32]string{
 	1: "INTERNAL_ERROR",
 	2: "INVALID_EMAIL",
 	3: "INVALID_USERNAME",
-	4: "INVALID_PASSWORD",
-	5: "BLANK_USERNAME",
-	6: "BLANK_PASSWORD",
+	4: "USERNAME_TAKEN",
+	5: "EMAIL_TAKEN",
+	6: "BLANK_USERNAME",
+	7: "BLANK_PASSWORD",
 }
 
 var CreateUserResponse_ErrorCode_value = map[string]int32{
@@ -87,9 +89,10 @@ var CreateUserResponse_ErrorCode_value = map[string]int32{
 	"INTERNAL_ERROR":   1,
 	"INVALID_EMAIL":    2,
 	"INVALID_USERNAME": 3,
-	"INVALID_PASSWORD": 4,
-	"BLANK_USERNAME":   5,
-	"BLANK_PASSWORD":   6,
+	"USERNAME_TAKEN":   4,
+	"EMAIL_TAKEN":      5,
+	"BLANK_USERNAME":   6,
+	"BLANK_PASSWORD":   7,
 }
 
 func (x CreateUserResponse_ErrorCode) String() string {
@@ -259,7 +262,8 @@ func (m *CreateUserRequest) GetPassword() string {
 
 type CreateUserResponse struct {
 	Api                  string                       `protobuf:"bytes,1,opt,name=api,proto3" json:"api,omitempty"`
-	ErrorCode            CreateUserResponse_ErrorCode `protobuf:"varint,2,opt,name=error_code,json=errorCode,proto3,enum=auth.v1.CreateUserResponse_ErrorCode" json:"error_code,omitempty"`
+	Success              bool                         `protobuf:"varint,2,opt,name=success,proto3" json:"success,omitempty"`
+	ErrorCode            CreateUserResponse_ErrorCode `protobuf:"varint,3,opt,name=error_code,json=errorCode,proto3,enum=auth.v1.CreateUserResponse_ErrorCode" json:"error_code,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}                     `json:"-"`
 	XXX_unrecognized     []byte                       `json:"-"`
 	XXX_sizecache        int32                        `json:"-"`
@@ -297,6 +301,13 @@ func (m *CreateUserResponse) GetApi() string {
 	return ""
 }
 
+func (m *CreateUserResponse) GetSuccess() bool {
+	if m != nil {
+		return m.Success
+	}
+	return false
+}
+
 func (m *CreateUserResponse) GetErrorCode() CreateUserResponse_ErrorCode {
 	if m != nil {
 		return m.ErrorCode
@@ -316,48 +327,49 @@ func init() {
 func init() { proto.RegisterFile("auth-service.proto", fileDescriptor_40c3308acdd691b6) }
 
 var fileDescriptor_40c3308acdd691b6 = []byte{
-	// 648 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x93, 0xcd, 0x6e, 0xd3, 0x4a,
-	0x14, 0xc7, 0xaf, 0x9d, 0x7e, 0x4e, 0x3f, 0xae, 0x3b, 0xed, 0xad, 0xda, 0xdc, 0xab, 0x2b, 0x63,
-	0x09, 0xa9, 0x8a, 0xa8, 0xdd, 0x84, 0xae, 0xc2, 0x02, 0xdc, 0xc4, 0x48, 0x11, 0x69, 0x42, 0x27,
-	0x09, 0x48, 0xdd, 0x58, 0xd3, 0xe4, 0x90, 0x18, 0xd2, 0x19, 0x77, 0x66, 0x9c, 0x22, 0xc4, 0x0a,
-	0x24, 0x1e, 0x00, 0x16, 0x48, 0xbc, 0x07, 0x4f, 0xc2, 0x8e, 0x25, 0xe2, 0x41, 0x90, 0x1d, 0xe7,
-	0xa3, 0x6d, 0xa8, 0xc4, 0x2a, 0x33, 0xff, 0x73, 0xe6, 0x7f, 0x72, 0x7e, 0x3e, 0x07, 0x61, 0x1a,
-	0xa9, 0xde, 0xbe, 0x04, 0x31, 0x08, 0xda, 0x60, 0x87, 0x82, 0x2b, 0x8e, 0x17, 0x63, 0xcd, 0x1e,
-	0xe4, 0xb3, 0xff, 0x75, 0x39, 0xef, 0xf6, 0xc1, 0xa1, 0x61, 0xe0, 0x50, 0xc6, 0xb8, 0xa2, 0x2a,
-	0xe0, 0x4c, 0x0e, 0xd3, 0xb2, 0xf7, 0x92, 0x9f, 0xf6, 0x7e, 0x17, 0xd8, 0xbe, 0xbc, 0xa4, 0xdd,
-	0x2e, 0x08, 0x87, 0x87, 0x49, 0xc6, 0xcd, 0x6c, 0xeb, 0x31, 0x5a, 0xad, 0xf2, 0x6e, 0xc0, 0x08,
-	0x5c, 0x44, 0x20, 0x15, 0xce, 0xa2, 0xa5, 0x48, 0x82, 0x60, 0xf4, 0x1c, 0x76, 0x34, 0x53, 0xdb,
-	0x5b, 0x26, 0xe3, 0x7b, 0x1c, 0x0b, 0xa9, 0x94, 0x97, 0x5c, 0x74, 0x76, 0xf4, 0x61, 0x6c, 0x74,
-	0xb7, 0xde, 0xeb, 0x68, 0x2d, 0x35, 0x92, 0x21, 0x67, 0x12, 0xb0, 0x81, 0x32, 0x34, 0x0c, 0x52,
-	0x93, 0xf8, 0x88, 0xef, 0xa0, 0x55, 0x1e, 0xd2, 0x8b, 0x08, 0x7c, 0xc5, 0x5f, 0x01, 0x4b, 0x3d,
-	0x56, 0x86, 0x5a, 0x33, 0x96, 0xf0, 0x43, 0x84, 0x40, 0x08, 0x2e, 0xfc, 0x36, 0xef, 0xc0, 0x4e,
-	0xc6, 0xd4, 0xf6, 0xd6, 0x0b, 0xa6, 0x9d, 0x36, 0x6e, 0x5f, 0x29, 0x60, 0x7b, 0x71, 0x62, 0x89,
-	0x77, 0x80, 0x2c, 0xc3, 0xe8, 0x68, 0xbd, 0x45, 0xcb, 0x63, 0x1d, 0xff, 0x8d, 0x56, 0x8e, 0xdc,
-	0xb2, 0x4f, 0xbc, 0x93, 0x96, 0xd7, 0x68, 0x1a, 0x7f, 0x61, 0x8c, 0xd6, 0x2b, 0xb5, 0xa6, 0x47,
-	0x6a, 0x6e, 0xd5, 0xf7, 0x08, 0xa9, 0x13, 0x43, 0xc3, 0x16, 0xfa, 0xbf, 0x52, 0x2b, 0xd5, 0x09,
-	0xf1, 0x4a, 0x4d, 0xbf, 0xd5, 0x88, 0x83, 0xc7, 0x9e, 0x5f, 0x27, 0xfe, 0x53, 0xb7, 0xd1, 0x78,
-	0x5e, 0x27, 0x65, 0x43, 0x8f, 0xdf, 0x1d, 0x55, 0xdd, 0xda, 0x93, 0x71, 0xdc, 0xc8, 0x4c, 0xb4,
-	0x71, 0xde, 0x9c, 0x45, 0xd1, 0x46, 0x49, 0x00, 0x55, 0xd0, 0x92, 0x20, 0x46, 0x48, 0xb7, 0xd0,
-	0x3c, 0x9c, 0xd3, 0xa0, 0x9f, 0xa2, 0x18, 0x5e, 0xae, 0x80, 0xd6, 0x6f, 0x01, 0x9d, 0xb9, 0x06,
-	0xfa, 0x83, 0x8e, 0xf0, 0x74, 0x8d, 0xdf, 0xd2, 0x2e, 0x5f, 0x41, 0xa9, 0x27, 0x28, 0xef, 0x8e,
-	0x51, 0xde, 0xb4, 0x98, 0xcd, 0xf3, 0xb3, 0xf6, 0xc7, 0x40, 0x37, 0xd0, 0x5a, 0xa5, 0xf6, 0xcc,
-	0xad, 0x56, 0xca, 0xbe, 0x77, 0xec, 0x56, 0xaa, 0x86, 0x8e, 0xb7, 0x90, 0x31, 0x92, 0xa6, 0x08,
-	0x4e, 0xa9, 0x13, 0x86, 0x33, 0x58, 0xcf, 0xcf, 0x60, 0xbd, 0x50, 0xf8, 0xaa, 0xa1, 0x39, 0x37,
-	0x52, 0x3d, 0x7c, 0x8a, 0xd0, 0xa4, 0x1b, 0x9c, 0x9d, 0xd9, 0x62, 0xf2, 0x25, 0xb2, 0xff, 0xde,
-	0xd2, 0xbe, 0xb5, 0xf9, 0xee, 0xdb, 0xcf, 0x4f, 0xfa, 0x9a, 0xb5, 0xe4, 0x0c, 0xf2, 0x4e, 0x9c,
-	0x57, 0xd4, 0x72, 0xf8, 0x04, 0xcd, 0x27, 0x43, 0x87, 0xff, 0xb9, 0x3e, 0x84, 0x43, 0xc7, 0xed,
-	0xd9, 0xb3, 0x69, 0xed, 0x26, 0x66, 0x9b, 0xd6, 0xfa, 0xc8, 0xcc, 0xe9, 0xc7, 0xf1, 0xa2, 0x96,
-	0x3b, 0xfa, 0xa1, 0x7d, 0x74, 0xbf, 0x6b, 0x58, 0xa1, 0xed, 0xf8, 0xdf, 0x03, 0x53, 0x41, 0x3b,
-	0xd9, 0x48, 0x33, 0xdd, 0x76, 0xab, 0x85, 0x56, 0xa7, 0xb7, 0x1f, 0xe7, 0x7a, 0x4a, 0x85, 0xb2,
-	0xe8, 0x38, 0xdd, 0x40, 0xf5, 0xe9, 0x99, 0xdd, 0xe6, 0xe7, 0xce, 0x1b, 0x10, 0xdc, 0x7f, 0x21,
-	0xb8, 0x54, 0xce, 0x74, 0x6e, 0x76, 0x77, 0x12, 0x78, 0x94, 0x2c, 0x38, 0x8b, 0x87, 0x2d, 0x7e,
-	0x52, 0xc8, 0xe4, 0xed, 0x83, 0x9c, 0xa6, 0x15, 0x0c, 0x1a, 0x86, 0xfd, 0xb4, 0xa6, 0xf3, 0x52,
-	0x72, 0x56, 0xbc, 0xa1, 0x90, 0x07, 0x28, 0x73, 0x78, 0x70, 0x88, 0x0f, 0x51, 0x8e, 0x80, 0x8a,
-	0x04, 0x83, 0x8e, 0x79, 0xd9, 0x03, 0x66, 0xaa, 0x1e, 0x98, 0x02, 0x24, 0x8f, 0x44, 0x1b, 0xcc,
-	0x0e, 0x07, 0x69, 0x32, 0xae, 0x4c, 0x78, 0x1d, 0x48, 0x65, 0xe3, 0x05, 0x34, 0xf7, 0x45, 0xd7,
-	0x16, 0x4f, 0xf5, 0x41, 0xfe, 0x6c, 0x21, 0x29, 0x7e, 0xff, 0x57, 0x00, 0x00, 0x00, 0xff, 0xff,
-	0xbb, 0xec, 0x0b, 0xc3, 0xc8, 0x04, 0x00, 0x00,
+	// 670 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x54, 0xcd, 0x6e, 0xd3, 0x4a,
+	0x14, 0xbe, 0x76, 0xd2, 0xa6, 0x9d, 0xfe, 0x5c, 0x77, 0xda, 0x5b, 0xa5, 0xb9, 0x08, 0x19, 0x4b,
+	0x48, 0x55, 0x44, 0xed, 0x26, 0x74, 0x15, 0x16, 0xe0, 0x26, 0x46, 0x8a, 0x9a, 0x26, 0x74, 0x92,
+	0x80, 0xd4, 0x8d, 0xe5, 0x3a, 0x87, 0xc4, 0x90, 0xce, 0xb8, 0x33, 0xe3, 0x14, 0x21, 0x56, 0xf0,
+	0x06, 0xb0, 0xe3, 0x01, 0xd8, 0xb2, 0xe2, 0x49, 0xd8, 0xb1, 0x44, 0x3c, 0x08, 0xb2, 0xe3, 0xa4,
+	0x7f, 0xa1, 0x12, 0xab, 0xcc, 0xf9, 0xce, 0x37, 0xdf, 0xc9, 0x7c, 0xe7, 0xf8, 0x20, 0xec, 0x45,
+	0x72, 0xb0, 0x23, 0x80, 0x8f, 0x02, 0x1f, 0xcc, 0x90, 0x33, 0xc9, 0x70, 0x2e, 0xc6, 0xcc, 0x51,
+	0xa9, 0x70, 0xa7, 0xcf, 0x58, 0x7f, 0x08, 0x96, 0x17, 0x06, 0x96, 0x47, 0x29, 0x93, 0x9e, 0x0c,
+	0x18, 0x15, 0x63, 0x5a, 0xe1, 0x41, 0xf2, 0xe3, 0xef, 0xf4, 0x81, 0xee, 0x88, 0x73, 0xaf, 0xdf,
+	0x07, 0x6e, 0xb1, 0x30, 0x61, 0xdc, 0x64, 0x1b, 0x4f, 0xd1, 0x72, 0x83, 0xf5, 0x03, 0x4a, 0xe0,
+	0x2c, 0x02, 0x21, 0x71, 0x01, 0x2d, 0x44, 0x02, 0x38, 0xf5, 0x4e, 0x21, 0xaf, 0xe8, 0xca, 0xf6,
+	0x22, 0x99, 0xc6, 0x71, 0x2e, 0xf4, 0x84, 0x38, 0x67, 0xbc, 0x97, 0x57, 0xc7, 0xb9, 0x49, 0x6c,
+	0x7c, 0x50, 0xd1, 0x4a, 0x2a, 0x24, 0x42, 0x46, 0x05, 0x60, 0x0d, 0x65, 0xbc, 0x30, 0x48, 0x45,
+	0xe2, 0x23, 0xbe, 0x87, 0x96, 0x59, 0xe8, 0x9d, 0x45, 0xe0, 0x4a, 0xf6, 0x1a, 0x68, 0xaa, 0xb1,
+	0x34, 0xc6, 0x3a, 0x31, 0x84, 0x1f, 0x23, 0x04, 0x9c, 0x33, 0xee, 0xfa, 0xac, 0x07, 0xf9, 0x8c,
+	0xae, 0x6c, 0xaf, 0x96, 0x75, 0x33, 0x7d, 0xb8, 0x79, 0xa5, 0x80, 0xe9, 0xc4, 0xc4, 0x2a, 0xeb,
+	0x01, 0x59, 0x84, 0xc9, 0xd1, 0x78, 0x87, 0x16, 0xa7, 0x38, 0xfe, 0x17, 0x2d, 0xed, 0xdb, 0x35,
+	0x97, 0x38, 0x47, 0x5d, 0xa7, 0xdd, 0xd1, 0xfe, 0xc1, 0x18, 0xad, 0xd6, 0x9b, 0x1d, 0x87, 0x34,
+	0xed, 0x86, 0xeb, 0x10, 0xd2, 0x22, 0x9a, 0x82, 0x0d, 0x74, 0xb7, 0xde, 0xac, 0xb6, 0x08, 0x71,
+	0xaa, 0x1d, 0xb7, 0xdb, 0x8e, 0x93, 0x87, 0x8e, 0xdb, 0x22, 0xee, 0x33, 0xbb, 0xdd, 0x7e, 0xd1,
+	0x22, 0x35, 0x4d, 0x8d, 0xef, 0xed, 0x37, 0xec, 0xe6, 0xc1, 0x34, 0xaf, 0x65, 0x2e, 0xb0, 0x29,
+	0x2f, 0x6b, 0x78, 0x68, 0xad, 0xca, 0xc1, 0x93, 0xd0, 0x15, 0xc0, 0x27, 0x96, 0x6e, 0xa0, 0x39,
+	0x38, 0xf5, 0x82, 0x61, 0x6a, 0xc5, 0x38, 0xb8, 0x62, 0xb4, 0x7a, 0x8b, 0xd1, 0x99, 0x6b, 0x46,
+	0x7f, 0x55, 0x11, 0xbe, 0x5c, 0xe3, 0x8f, 0x6e, 0xe7, 0x51, 0x4e, 0x44, 0xbe, 0x0f, 0x42, 0x24,
+	0xfa, 0x0b, 0x64, 0x12, 0xe2, 0xda, 0x0c, 0x93, 0xef, 0x4f, 0x4d, 0xbe, 0x29, 0x3e, 0xdb, 0xe9,
+	0x2f, 0xca, 0x5f, 0x5b, 0xbd, 0x86, 0x56, 0xea, 0xcd, 0xe7, 0x76, 0xa3, 0x5e, 0x73, 0x9d, 0x43,
+	0xbb, 0xde, 0xd0, 0x54, 0xbc, 0x81, 0xb4, 0x09, 0x74, 0xd5, 0xdb, 0x69, 0x27, 0x3a, 0xf6, 0x81,
+	0xd3, 0xd4, 0xb2, 0x71, 0x85, 0xe4, 0x52, 0x0a, 0xcc, 0xcd, 0x68, 0xca, 0xfc, 0x8c, 0xa6, 0xe4,
+	0xca, 0xdf, 0x14, 0x94, 0xb5, 0x23, 0x39, 0xc0, 0xc7, 0x08, 0x5d, 0x3c, 0x0e, 0x17, 0x66, 0xbe,
+	0x38, 0x69, 0x59, 0xe1, 0xff, 0x5b, 0xdc, 0x30, 0xd6, 0xdf, 0x7f, 0xff, 0xf5, 0x49, 0x5d, 0x31,
+	0x16, 0xac, 0x51, 0xc9, 0x8a, 0x79, 0x15, 0xa5, 0x88, 0x8f, 0xd0, 0x5c, 0x32, 0x9d, 0xf8, 0xbf,
+	0xeb, 0xd3, 0x3a, 0x56, 0xdc, 0x9c, 0x3d, 0xc4, 0xc6, 0x56, 0x22, 0xb6, 0x6e, 0xac, 0x4e, 0xc4,
+	0xac, 0x61, 0x9c, 0xaf, 0x28, 0xc5, 0xfd, 0x9f, 0xca, 0x47, 0xfb, 0x87, 0x82, 0x25, 0xda, 0x8c,
+	0xff, 0x3d, 0x50, 0x19, 0xf8, 0xc9, 0xa7, 0xab, 0xa7, 0x6b, 0xc1, 0xe8, 0xa2, 0xe5, 0xcb, 0x6b,
+	0x02, 0x17, 0x07, 0x52, 0x86, 0xa2, 0x62, 0x59, 0xfd, 0x40, 0x0e, 0xbd, 0x13, 0xd3, 0x67, 0xa7,
+	0xd6, 0x5b, 0xe0, 0xcc, 0x7d, 0xc9, 0x99, 0x90, 0xd6, 0x65, 0x6e, 0x61, 0xeb, 0x22, 0xf1, 0x24,
+	0xd9, 0x04, 0x34, 0x9e, 0xca, 0xf8, 0x4a, 0x39, 0x53, 0x32, 0x77, 0x8b, 0x8a, 0x52, 0xd6, 0xbc,
+	0x30, 0x1c, 0xa6, 0x35, 0xad, 0x57, 0x82, 0xd1, 0xca, 0x0d, 0x84, 0x3c, 0x42, 0x99, 0xbd, 0xdd,
+	0x3d, 0xbc, 0x87, 0x8a, 0x04, 0x64, 0xc4, 0x29, 0xf4, 0xf4, 0xf3, 0x01, 0x50, 0x5d, 0x0e, 0x40,
+	0xe7, 0x20, 0x58, 0xc4, 0x7d, 0xd0, 0x7b, 0x0c, 0x84, 0x4e, 0x99, 0xd4, 0xe1, 0x4d, 0x20, 0xa4,
+	0x89, 0xe7, 0x51, 0xf6, 0xb3, 0xaa, 0xe4, 0x8e, 0xd5, 0x51, 0xe9, 0x64, 0x3e, 0x29, 0xfe, 0xf0,
+	0x77, 0x00, 0x00, 0x00, 0xff, 0xff, 0x94, 0xbe, 0x1a, 0x7d, 0xf1, 0x04, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
